--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,66 +38,500 @@
 #   inputs:
 #     provisioningProfileLocation: 'secureFiles'
 #     provProfileSecureFile: 'swiftdemoadco1.mobileprovision'
+#################################################################develop##############################################################################################
+# trigger:
+#   branches:
+#     include:
+#     - main
+# variables:
+# - name: scheme
+#   value: 'SwiftDemoProject'
+# - name: sdk
+#   value: 'iphoneos'
+# - name: configuration
+#   value: 'Release'
+# - name: teamId
+#   value: '354KR9R8P7'
+# - name: deploymentTarget
+#   value: '18.0'
+# stages:
+# - stage: __default
+#   jobs:
+#   - job: Job
+#     pool:
+#       vmImage: 'macos-15'
+#     steps:
+#     - task: CmdLine@2
+#       displayName: 'List Xcode versions'
+#       inputs:
+#         script: ls /Applications/
+#     - task: InstallAppleCertificate@2
+#       inputs:
+#         certSecureFile: 'Certificates.p12'
+#         certPwd: 'Ccare@123'
+#     - task: InstallAppleProvisioningProfile@1
+#       inputs:
+#         provisioningProfileLocation: 'secureFiles'
+#         provProfileSecureFile: 'swiftdemoadco1.mobileprovision'
+#     - task: CmdLine@2
+#       displayName: 'Clean project'
+#       inputs:
+#         script: |
+#           xcodebuild clean \
+#             -project SwiftDemoProject.xcodeproj \
+#             -scheme $(scheme) \
+#             -configuration $(configuration) \
+#             IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+#             CODE_SIGN_STYLE=Automatic \
+#             CODE_SIGN_IDENTITY="Apple Development" \
+#             DEVELOPMENT_TEAM=$(teamId)
+#     - task: CmdLine@2
+#       displayName: 'Build project'
+#       inputs:
+#         - script: |
+#             xcodebuild build \
+#              -project SwiftDemoProject.xcodeproj \
+#              -scheme $(scheme) \
+#              -configuration $(configuration) \
+#              -sdk $(sdk) \
+#              CODE_SIGN_STYLE=Manual \
+#              CODE_SIGN_IDENTITY="Apple Distribution" \
+#              DEVELOPMENT_TEAM=$(teamId) \
+#              PROVISIONING_PROFILE_SPECIFIER="8177e2a5-4d52-4726-9da6-242aa1175031"
+#   displayName: 'Build'
+
+#         # script: |
+#         #   xcodebuild build \
+#         #     -project SwiftDemoProject.xcodeproj \
+#         #     -scheme $(scheme) \
+#         #     -configuration $(configuration) \
+#         #     -sdk $(sdk) \
+#         #     CODE_SIGN_STYLE=Manual \
+#         #     CODE_SIGN_IDENTITY="Apple Development" \
+#         #     DEVELOPMENT_TEAM=$(teamId) \
+#         #     PROVISIONING_PROFILE_SPECIFIER="swiftdemoadco1.mobileprovision"
+#     - task: CmdLine@2
+#       displayName: 'Run unit/UI tests'
+#       inputs:
+#         script: |
+#           xcodebuild test \
+#             -project SwiftDemoProject.xcodeproj \
+#             -scheme $(scheme) \
+#             -destination 'platform=iOS Simulator,name=iPhone 15' \
+#             IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+#             CODE_SIGN_STYLE=Automatic \
+#             CODE_SIGN_IDENTITY="Apple Development" \
+#             DEVELOPMENT_TEAM=$(teamId)
+#     - task: CmdLine@2
+#       displayName: 'Archive app'
+#       inputs:
+#         script: |
+#           xcodebuild archive \
+#             -project SwiftDemoProject.xcodeproj \
+#             -scheme $(scheme) \
+#             -sdk $(sdk) \
+#             -configuration $(configuration) \
+#             -archivePath $(build.artifactstagingdirectory)/$(scheme).xcarchive \
+#             IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+#             CODE_SIGN_STYLE=Automatic \
+#             CODE_SIGN_IDENTITY="Apple Development" \
+#             DEVELOPMENT_TEAM=$(teamId)
+#     - task: CmdLine@2
+#       displayName: 'List contents after archive'
+#       inputs:
+#         script: |
+#           ls -lh $(build.artifactstagingdirectory)/
+#     - task: DownloadSecureFile@1
+#       name: exportOptionsPlistFile
+#       inputs:
+#         secureFile: 'ExportOptions.plist'
+#     - task: CmdLine@2
+#       displayName: 'Export IPA'
+#       inputs:
+#         script: |
+#           xcodebuild -exportArchive \
+#             -archivePath $(build.artifactstagingdirectory)/$(scheme).xcarchive \
+#             -exportPath $(build.artifactstagingdirectory)/exportedIPA \
+#             -exportOptionsPlist $(exportOptionsPlistFile.secureFilePath) \
+#             IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+#             CODE_SIGN_STYLE=Automatic \
+#             CODE_SIGN_IDENTITY="Apple Development" \
+#             DEVELOPMENT_TEAM=$(teamId)
+#     - task: PublishBuildArtifacts@1
+#       inputs:
+#         PathtoPublish: '$(build.artifactstagingdirectory)/exportedIPA'
+#         ArtifactName: 'drop'
+#       displayName: 'Publish IPA artifact'
+####################################################fix###########################################################################################
+
+
+# trigger:
+#   branches:
+#     include:
+#       - main
+
+# variables:
+#   scheme: 'SwiftDemoProject'
+#   sdk: 'iphoneos'
+#   configuration: 'Release'
+#   teamId: '354KR9R8P7'
+#   deploymentTarget: '17.6'
+#   # profileUUID: 'swiftdemoadco1.mobileprovision'    # <-- put your profile UUID here
+
+# pool:
+#   vmImage: 'macos-15'
+
+# steps:
+# - script: ls /Applications/
+#   displayName: 'List Xcode versions'
+
+# - task: InstallAppleCertificate@2
+#   inputs:
+#     certSecureFile: 'Certificates.p12'
+#     certPwd: 'Ccare@123'
+
+# - task: InstallAppleProvisioningProfile@1
+#   inputs:
+#     provisioningProfileLocation: 'secureFiles'
+#     provProfileSecureFile: 'swiftdemoadco1.mobileprovision'
+
+# - script: |
+#     xcodebuild clean \
+#       -project SwiftDemoProject.xcodeproj \
+#       -scheme $(scheme) \
+#       -configuration $(configuration) \
+#       IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+#       CODE_SIGN_STYLE=Manual \
+#       CODE_SIGN_IDENTITY="Apple Distribution" \
+#       DEVELOPMENT_TEAM=$(teamId)
+#       # PROVISIONING_PROFILE_SPECIFIER=$(profileUUID)
+#   displayName: 'Clean project'
+
+# - script: |
+#     xcodebuild build \
+#       -project SwiftDemoProject.xcodeproj \
+#       -scheme $(scheme) \
+#       -configuration $(configuration) \
+#       -sdk $(sdk) \
+#       CODE_SIGN_STYLE=Manual \
+#       CODE_SIGN_IDENTITY="Apple Distribution" \
+#       DEVELOPMENT_TEAM=$(teamId)
+#       # PROVISIONING_PROFILE_SPECIFIER=$(profileUUID)
+#   displayName: 'Build project'
+
+# - script: |
+#     xcodebuild test \
+#       -project SwiftDemoProject.xcodeproj \
+#       -scheme $(scheme) \
+#       -destination 'platform=iOS Simulator,name=iPhone 15' \
+#       IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget)
+#   displayName: 'Run unit/UI tests'
+
+# - script: |
+#     xcodebuild archive \
+#       -project SwiftDemoProject.xcodeproj \
+#       -scheme $(scheme) \
+#       -sdk $(sdk) \
+#       -configuration $(configuration) \
+#       -archivePath $(build.artifactstagingdirectory)/$(scheme).xcarchive \
+#       IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+#       CODE_SIGN_STYLE=Manual \
+#       CODE_SIGN_IDENTITY="Apple Distribution" \
+#       DEVELOPMENT_TEAM=$(teamId) 
+#       # PROVISIONING_PROFILE_SPECIFIER=$(profileUUID)
+#   displayName: 'Archive app'
+
+# - script: |
+#     ls -lh $(build.artifactstagingdirectory)/
+#   displayName: 'List contents after archive'
+
+# - task: DownloadSecureFile@1
+#   name: exportOptionsPlistFile
+#   inputs:
+#     secureFile: 'ExportOptions.plist'
+
+# - script: |
+#     xcodebuild -exportArchive \
+#       -archivePath $(build.artifactstagingdirectory)/$(scheme).xcarchive \
+#       -exportPath $(build.artifactstagingdirectory)/exportedIPA \
+#       -exportOptionsPlist $(exportOptionsPlistFile.secureFilePath) \
+#       IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+#       CODE_SIGN_STYLE=Manual \
+#       CODE_SIGN_IDENTITY="Apple Distribution" \
+#       DEVELOPMENT_TEAM=$(teamId) 
+#       # PROVISIONING_PROFILE_SPECIFIER=$(profileUUID)
+#   displayName: 'Export IPA'
+
+# - task: PublishBuildArtifacts@1
+#   inputs:
+#     PathtoPublish: '$(build.artifactstagingdirectory)/exportedIPA'
+#     ArtifactName: 'drop'
+#   displayName: 'Publish IPA artifact'
+
+
+
+# trigger:
+#   branches:
+#     include:
+#     - main
+# variables:
+# - name: scheme
+#   value: 'SwiftDemoProject'
+# - name: sdk
+#   value: 'iphoneos'
+# - name: configuration
+#   value: 'Release'
+# - name: teamId
+#   value: '354KR9R8P7'
+# - name: deploymentTarget
+#   value: '18.0'
+# stages:
+# - stage: __default
+#   jobs:
+#   - job: Job
+#     pool:
+#       vmImage: 'macos-15'
+#     steps:
+#     - task: CmdLine@2
+#       displayName: 'List Xcode versions'
+#       inputs:
+#         script: ls /Applications/
+#     - task: InstallAppleCertificate@2
+#       inputs:
+#         certSecureFile: 'Certificates.p12'
+#         certPwd: 'Ccare@123'
+#     - task: InstallAppleProvisioningProfile@1
+#       inputs:
+#         provisioningProfileLocation: 'secureFiles'
+#         provProfileSecureFile: 'swiftdemoadco1.mobileprovision'
+#     - task: CmdLine@2
+#       displayName: 'Clean project'
+#       inputs:
+#         script: |2
+
+#           xcodebuild clean \
+
+#             -project SwiftDemoProject.xcodeproj \
+
+#             -scheme $(scheme) \
+
+#             -configuration $(configuration) \
+
+#             IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+
+#             CODE_SIGN_STYLE=Automatic \
+
+#             CODE_SIGN_IDENTITY="Apple Development" \
+
+#             DEVELOPMENT_TEAM=$(teamId) \
+
+#             PROVISIONING_PROFILE_SPECIFIER=""
+#     - task: CmdLine@2
+#       displayName: 'Build project'
+#       inputs:
+#         script: |2
+
+#           xcodebuild build \
+
+#             -project SwiftDemoProject.xcodeproj \
+
+#             -scheme $(scheme) \
+
+#             -configuration $(configuration) \
+
+#             -sdk $(sdk) \
+
+#             IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+
+#             CODE_SIGN_STYLE=Automatic \
+
+#             CODE_SIGN_IDENTITY="Apple Development" \
+
+#             DEVELOPMENT_TEAM=$(teamId) \
+
+#             PROVISIONING_PROFILE_SPECIFIER=""
+#     - task: CmdLine@2
+#       displayName: 'Run unit/UI tests'
+#       inputs:
+#         script: |2
+
+#           xcodebuild test \
+
+#             -project SwiftDemoProject.xcodeproj \
+
+#             -scheme $(scheme) \
+
+#             -destination 'platform=iOS Simulator,name=iPhone 15' \
+
+#             IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+
+#             CODE_SIGN_STYLE=Automatic \
+
+#             CODE_SIGN_IDENTITY="Apple Development" \
+
+#             DEVELOPMENT_TEAM=$(teamId) \
+
+#             PROVISIONING_PROFILE_SPECIFIER=""
+#     - task: CmdLine@2
+#       displayName: 'Archive app'
+#       inputs:
+#         script: |2
+
+#           xcodebuild archive \
+
+#             -project SwiftDemoProject.xcodeproj \
+
+#             -scheme $(scheme) \
+
+#             -sdk $(sdk) \
+
+#             -configuration $(configuration) \
+
+#             -archivePath $(build.artifactstagingdirectory)/$(scheme).xcarchive \
+
+#             IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+
+#             CODE_SIGN_STYLE=Automatic \
+
+#             CODE_SIGN_IDENTITY="Apple Development" \
+
+#             DEVELOPMENT_TEAM=$(teamId) \
+
+#             PROVISIONING_PROFILE_SPECIFIER=""
+#     - task: CmdLine@2
+#       displayName: 'Export IPA'
+#       inputs:
+#         script: |2
+
+#           xcodebuild -exportArchive \
+
+#             -archivePath $(build.artifactstagingdirectory)/$(scheme).xcarchive \
+
+#             -exportPath $(build.artifactstagingdirectory)/exportedIPA \
+
+#             -exportOptionsPlist ExportOptions.plist \
+
+#             IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+
+#             CODE_SIGN_STYLE=Automatic \
+
+#             CODE_SIGN_IDENTITY="Apple Development" \
+
+#             DEVELOPMENT_TEAM=$(teamId) \
+
+#             PROVISIONING_PROFILE_SPECIFIER=""
+#     - task: PublishBuildArtifacts@1
+#       inputs:
+#         PathtoPublish: '$(build.artifactstagingdirectory)/exportedIPA'
+#         ArtifactName: 'drop'
+#       displayName: 'Publish IPA artifact'
 
 trigger:
-- main
-
-pool:
-  vmImage: 'macos-15'
+  branches:
+    include:
+      - main
 
 variables:
-  scheme: 'SwiftDemoProject'
-  sdk: 'iphoneos'
-  configuration: 'Release'
+  - name: scheme
+    value: 'SwiftDemoProject'
+  - name: sdk
+    value: 'iphoneos'
+  - name: configuration
+    value: 'Release'
+  - name: teamId
+    value: '354KR9R8P7'
+  - name: deploymentTarget
+    value: '18.0'
 
-steps:
-# - script: |
-#     sudo xcode-select -s /Applications/Xcode_16.app/Contents/Developer
-#     xcodebuild -version
-#   displayName: 'Switch to Xcode 16'
-- script: ls /Applications/
-  displayName: 'List Xcode versions'
+stages:
+- stage: __default
+  jobs:
+  - job: Job
+    pool:
+      vmImage: 'macos-15'
+    steps:
+    - task: CmdLine@2
+      displayName: 'List Xcode versions'
+      inputs:
+        script: ls /Applications/
+    - task: InstallAppleCertificate@2
+      inputs:
+        certSecureFile: 'Certificates.p12'
+        certPwd: 'Ccare@123'
+    - task: InstallAppleProvisioningProfile@1
+      inputs:
+        provisioningProfileLocation: 'secureFiles'
+        provProfileSecureFile: 'swiftdemoadco1.mobileprovision'
+    - task: CmdLine@2
+      displayName: 'Clean project'
+      inputs:
+        script: |
+          xcodebuild clean \
+            -project SwiftDemoProject.xcodeproj \
+            -scheme $(scheme) \
+            -configuration $(configuration) \
+            IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+            CODE_SIGN_STYLE=Automatic \
+            CODE_SIGN_IDENTITY="Apple Development" \
+            DEVELOPMENT_TEAM=$(teamId) \
+            PROVISIONING_PROFILE_SPECIFIER=""
+    - task: CmdLine@2
+      displayName: 'Build project'
+      inputs:
+        script: |
+          xcodebuild build \
+            -project SwiftDemoProject.xcodeproj \
+            -scheme $(scheme) \
+            -configuration $(configuration) \
+            -sdk $(sdk) \
+            CODE_SIGN_STYLE=Manual \
+            CODE_SIGN_IDENTITY="Apple Distribution" \
+            DEVELOPMENT_TEAM=$(teamId) \
+            PROVISIONING_PROFILE_SPECIFIER="8177e2a5-4d52-4726-9da6-242aa1175031"
+    # - task: CmdLine@2
+    #   displayName: 'Run unit/UI tests'
+    #   inputs:
+    #     script: |
+    #       xcodebuild test \
+    #         -project SwiftDemoProject.xcodeproj \
+    #         -scheme $(scheme) \
+    #         -destination 'platform=iOS Simulator,name=iPhone 15' \
+    #         IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+    #         CODE_SIGN_STYLE=Automatic \
+    #         CODE_SIGN_IDENTITY="Apple Development" \
+    #         DEVELOPMENT_TEAM=$(teamId) \
+    #         PROVISIONING_PROFILE_SPECIFIER=""
+    - task: CmdLine@2
+      displayName: 'Archive app'
+      inputs:
+        script: |
+          xcodebuild archive \
+            -project SwiftDemoProject.xcodeproj \
+            -scheme $(scheme) \
+            -sdk $(sdk) \
+            -configuration $(configuration) \
+            -archivePath $(build.artifactstagingdirectory)/$(scheme).xcarchive \
+            IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+            CODE_SIGN_STYLE=Manual \
+            CODE_SIGN_IDENTITY="Apple Distribution" \
+            DEVELOPMENT_TEAM=$(teamId) \
+            PROVISIONING_PROFILE_SPECIFIER="8177e2a5-4d52-4726-9da6-242aa1175031"
+    - task: CmdLine@2
+      displayName: 'Export IPA'
+      inputs:
+        script: |
+          xcodebuild -exportArchive \
+            -archivePath $(build.artifactstagingdirectory)/$(scheme).xcarchive \
+            -exportPath $(build.artifactstagingdirectory)/exportedIPA \
+            -exportOptionsPlist ExportOptions.plist \
+            IPHONEOS_DEPLOYMENT_TARGET=$(deploymentTarget) \
+            CODE_SIGN_STYLE=Manual \
+            CODE_SIGN_IDENTITY="Apple Distribution" \
+            DEVELOPMENT_TEAM=$(teamId) \
+            PROVISIONING_PROFILE_SPECIFIER="8177e2a5-4d52-4726-9da6-242aa1175031"
+    - task: PublishBuildArtifacts@1
+      displayName: 'Publish IPA artifact'
+      inputs:
+        PathtoPublish: '$(build.artifactstagingdirectory)/exportedIPA'
+        ArtifactName: 'drop'
 
-- task: InstallAppleCertificate@2
-  inputs:
-    certSecureFile: 'Certificates.p12'
-    certPwd: 'Ccare@123'
-
-- task: InstallAppleProvisioningProfile@1
-  inputs:
-    provisioningProfileLocation: 'secureFiles'
-    provProfileSecureFile: 'swiftdemoadco1.mobileprovision'
-
-- script: |
-    xcodebuild clean -project SwiftDemoProject.xcodeproj -scheme $(scheme) -configuration $(configuration)
-  displayName: 'Clean project'
-
-- script: |
-    xcodebuild build -project SwiftDemoProject.xcodeproj -scheme $(scheme) -configuration $(configuration) -sdk $(sdk)
-  displayName: 'Build project'
-
-- script: |
-    xcodebuild test -project SwiftDemoProject.xcodeproj -scheme $(scheme) -destination 'platform=iOS Simulator,name=iPhone 15'
-  displayName: 'Run unit/UI tests'
-
-- script: |
-    xcodebuild archive \
-      -project SwiftDemoProject.xcodeproj \
-      -scheme $(scheme) \
-      -sdk $(sdk) \
-      -configuration $(configuration) \
-      -archivePath $(build.artifactstagingdirectory)/$(scheme).xcarchive
-  displayName: 'Archive app'
-
-- script: |
-    xcodebuild -exportArchive \
-      -archivePath $(build.artifactstagingdirectory)/$(scheme).xcarchive \
-      -exportPath $(build.artifactstagingdirectory)/exportedIPA \
-      -exportOptionsPlist ExportOptions.plist
-  displayName: 'Export IPA'
-
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(build.artifactstagingdirectory)/exportedIPA'
-    ArtifactName: 'drop'
-  displayName: 'Publish IPA artifact'
